get orders for visit
