# storage/api-docs/api-docs.json
@@ -1162,6 +1162,32 @@
                     }
                 }
             }
+        },
+        "/visits/total/{visitId}": {
+            "get": {
+                "tags": [
+                    "Visits"
+                ],
+                "summary": "Get a total orders for this visit",
+                "operationId": "GetVisitTotal",
+                "parameters": [
+                    {
+                        "name": "visitId",
+                        "in": "path",
+                        "description": "Visit id",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
